--- a/Azienda/.classpath
+++ b/Azienda/.classpath
@@ -14,16 +14,7 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/rossellapilotta/Desktop/CorsoJavaAlfasoft/Librerie/Hibernate/Hibernate/antlr-2.7.7.jar"/>
-	<classpathentry kind="lib" path="C:/Users/rossellapilotta/Desktop/CorsoJavaAlfasoft/Librerie/Hibernate/Hibernate/classmate-1.3.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/rossellapilotta/Desktop/CorsoJavaAlfasoft/Librerie/Hibernate/Hibernate/dom4j-1.6.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/rossellapilotta/Desktop/CorsoJavaAlfasoft/Librerie/Hibernate/Hibernate/geronimo-jta_1.1_spec-1.1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/rossellapilotta/Desktop/CorsoJavaAlfasoft/Librerie/Hibernate/Hibernate/hibernate-commons-annotations-5.0.1.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/rossellapilotta/Desktop/CorsoJavaAlfasoft/Librerie/Hibernate/Hibernate/hibernate-core-5.1.0.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/rossellapilotta/Desktop/CorsoJavaAlfasoft/Librerie/Hibernate/Hibernate/hibernate-entitymanager-5.1.0.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/rossellapilotta/Desktop/CorsoJavaAlfasoft/Librerie/Hibernate/Hibernate/hibernate-jpa-2.1-api-1.0.0.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/rossellapilotta/Desktop/CorsoJavaAlfasoft/Librerie/Hibernate/Hibernate/jandex-2.0.0.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/rossellapilotta/Desktop/CorsoJavaAlfasoft/Librerie/Hibernate/Hibernate/javassist-3.20.0-GA.jar"/>
-	<classpathentry kind="lib" path="C:/Users/rossellapilotta/Desktop/CorsoJavaAlfasoft/Librerie/Hibernate/Hibernate/jboss-logging-3.3.0.Final.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Hibernate"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Jdbc"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
